[package]
name = "bomber"
version = "0.1.0"
authors = ["Carlo Abelli <carlo@abelli.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = "0.14"
failure = "0.1"
mongodb = "0.9"
serde = "1.0"
sha2 = "0.8"
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
